--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <h1>Create a Team and Heroes</h1>
 
 <form action='/teams' method='post'>
-  
+  <label>_: <input type="text" name=""></label><br>
 </form>
