--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,4 +2,17 @@
 
 <form action='/teams' method='post'>
   <label>_: <input type="text" name=""></label><br>
+  <label>_: <input type="text" name=""></label><br>
+  <h2>Hero 1</h2>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
+  <h2>Hero 2</h2>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
+  <h3>Hero 3</h3>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
+    <label>_: <input type="text" name=""></label><br>
 </form>
