automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <form action='/teams' method='post'>
   <h1>Create a Team and Heroes</h1>
-    <label>_: <input type="text" name=""></label><br>
-    <label>_: <input type="text" name=""></label><br>
+    <label>Team Name: <input type="text" name=""></label><br>
+    <label>Team Motto: <input type="text" name=""></label><br>
   <h2>Hero 1</h2>
     <label>_: <input type="text" name=""></label><br>
     <label>_: <input type="text" name=""></label><br>
