automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,7 +3,7 @@
     <label>Team Name: <input type="text" name=""></label><br>
     <label>Team Motto: <input type="text" name=""></label><br>
   <h2>Hero 1</h2>
-    <label>_: <input type="text" name=""></label><br>
+    <label>Hero's Name: <input type="text" name=""></label><br>
     <label>_: <input type="text" name=""></label><br>
     <label>_: <input type="text" name=""></label><br>
   <h2>Hero 2</h2>
