--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,9 +3,9 @@
     <label>Team Name: <input type="text" name=""></label><br>
     <label>Team Motto: <input type="text" name=""></label><br>
   <h2>Hero 1</h2>
-    <label>Hero's Name: <input id="member_name_1" type="text" name=""></label><br>
-    <label>Hero's Power: <input id="member_name_2" type="text" name=""></label><br>
-    <label>Hero's Biography: <input type="text" name=""></label><br>
+    <label>Hero's Name: <input id="member1_name" type="text" name=""></label><br>
+    <label>Hero's Power: <input id="member1_power" type="text" name=""></label><br>
+    <label>Hero's Biography: <input id="member1_bio" type="text" name=""></label><br>
   <h2>Hero 2</h2>
     <label>_: <input type="text" name=""></label><br>
     <label>_: <input type="text" name=""></label><br>
