--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 <form action='/teams' method='post'>
   <h1>Create a Team and Heroes</h1>
-    <label>Team Name: <input type="text" name=""></label><br>
-    <label>Team Motto: <input type="text" name=""></label><br>
+    <label>Team Name: <input type="text" name="team[name]"></label><br>
+    <label>Team Motto: <input type="text" name="team[motto]"></label><br>
   <h2>Hero 1</h2>
     <label>Hero's Name: <input id="member1_name" type="text" name="team[members][][name]"></label><br>
     <label>Hero's Power: <input id="member1_power" type="text" name="team[members][][power]"></label><br>
