--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,11 +7,11 @@
     <label>Hero's Power: <input id="member1_power" type="text" name="team[members][][power]"></label><br>
     <label>Hero's Biography: <input id="member1_bio" type="text" name="team[members][][bio]"></label><br>
   <h2>Hero 2</h2>
-    <label>_: <input type="text" name=""></label><br>
-    <label>_: <input type="text" name=""></label><br>
-    <label>_: <input type="text" name=""></label><br>
+  <label>Hero's Name: <input id="member1_name" type="text" name="team[members][][name]"></label><br>
+  <label>Hero's Power: <input id="member1_power" type="text" name="team[members][][power]"></label><br>
+  <label>Hero's Biography: <input id="member1_bio" type="text" name="team[members][][bio]"></label><br>
   <h3>Hero 3</h3>
-    <label>_: <input type="text" name=""></label><br>
-    <label>_: <input type="text" name=""></label><br>
-    <label>_: <input type="text" name=""></label><br>
+  <label>Hero's Name: <input id="member1_name" type="text" name="team[members][][name]"></label><br>
+  <label>Hero's Power: <input id="member1_power" type="text" name="team[members][][power]"></label><br>
+  <label>Hero's Biography: <input id="member1_bio" type="text" name="team[members][][bio]"></label><br>
 </form>
