--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,4 +17,6 @@
     <label>Hero's Name: <input id="member3_name" type="text" name="team[members][][name]"></label><br>
     <label>Hero's Power: <input id="member3_power" type="text" name="team[members][][power]"></label><br>
     <label>Hero's Biography: <input id="member3_bio" type="text" name="team[members][][bio]"></label><br>
+
+  <input type="submit" id="Submit">
 </form>
