--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
-<h2><%= @teams.name %></h2>
+<h2><%= @team.name %></h2>
 
-<h3>Team Mottor</h3>
+<h3><%= @team.motto %></h3>
 
 <h3>Hero Name: ___</h3>
 <p>Hero Power: ___</p>
