automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -2,6 +2,8 @@
 
 <h3><%= @team.motto %></h3>
 
+<% @members.each do |member| %>
+
 <h3>Hero Name: ___</h3>
 <p>Hero Power: ___</p>
 <p>Hero Biography: ___</p>
