--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,7 +3,7 @@
 <h3><%= @team.motto %></h3>
 
 <% @members.each do |member| %>
-  <h3>Hero Name: ___</h3>
+  <h3>Hero Name: <%= member.name</h3>
   <p>Hero Power: ___</p>
   <p>Hero Biography: ___</p>
 <% end %>
