automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,6 +4,6 @@
 
 <% @members.each do |member| %>
   <h3>Hero Name: <%= member.name %></h3>
-  <p>Hero Power: ___</p>
+  <p>Hero Power: <%= member.power ___</p>
   <p>Hero Biography: ___</p>
 <% end %>
