--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,5 +5,5 @@
 <% @members.each do |member| %>
   <h3>Hero Name: <%= member.name %></h3>
   <p>Hero Power: <%= member.power %></p>
-  <p>Hero Biography: ___</p>
+  <p>Hero Biography: <%= member.bio %></p>
 <% end %>
