--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -4,6 +4,6 @@
 
 <% @members.each do |member| %>
   <h2>Hero Name: <%= member.name %></h2>
-  <label>Hero Power: <%= member.power %></label>
+  <label>Hero Power: <%= member.power %></label><br>
   <label>Hero Biography: <%= member.bio %></label>
 <% end %>
